# ykt

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle.kts  build_bindings.sh  settings.gradle.kts
.github/workflows/: main.yml
yrs_kt/: .gitignore  build.gradle.kts
yrs_kt/src/main/kotlin/com/planerist/ykt/: .gitignore  yrs_tools.kt  yrs_uniffi.kt
yrs_kt/src/main/resources/: .gitignore
yrs_kt/src/main/resources/darwin-x86-64/: libyrs_uniffi.dylib
yrs_kt/src/test/kotlin/: YDocTest.kt  YXmlTest.kt  test1.kt
yrs_uniffi/: Cargo.toml  build.rs  uniffi-bindgen.rs  uniffi.toml
yrs_uniffi/src/: attrs.rs  collection.rs  delta.rs  doc.rs  js.rs  lib.rs  snapshots.rs  text.rs  tools.rs  transaction.rs  xml.rs  xml_elem.rs  xml_frag.rs  xml_text.rs
