[package]
name = "yrs_uniffi"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yrs = { version = "0.24.0", features = ["weak"] }
uniffi = { version = "0.29.3" }
thiserror = "2.0.11"

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build", "cli"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
uniffi = { version = "0.29.3" }
